--- a/.github/workflows/jekyll_build.yml
+++ b/.github/workflows/jekyll_build.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.0'  # 选择与您本地环境相匹配的 Ruby 版本
+        ruby-version: '3.3.0' 
 
     - name: Install dependencies
       run: |
