--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ github_username: YirenZzz # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username:  # your LinkedIn user name
-scholar_userid:  # your Google Scholar ID
+scholar_userid: YmY0b0gAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
